# swc-plugins

./: .gitignore  Cargo.toml  README.md  package.json  shined_swc_plugin.wasm
.github/workflows/: release.yml
src/: lib.rs
transform/: Cargo.toml
transform/src/: auto_css_modules.rs  lib.rs  lock_module.rs
transform/tests/: fixture.rs
transform/tests/fixtures/auto_css_modules/css_auto_modules/: input.js  output.js
transform/tests/fixtures/auto_css_modules/css_no_modules/: input.js
transform/tests/fixtures/auto_css_modules/less_auto_modules/: input.js  output.js
transform/tests/fixtures/auto_css_modules/less_no_modules/: output.js
transform/tests/fixtures/auto_css_modules/sass_auto_modules/: input.js  output.js
transform/tests/fixtures/auto_css_modules/sass_no_modules/: output.js
transform/tests/fixtures/auto_css_modules/scss_auto_modules/: input.js  output.js
transform/tests/fixtures/auto_css_modules/scss_no_modules/: input.js
transform/tests/fixtures/lock_core_js/lock/: input.js  output.js
