[package]
name = "auto_css_modules"
version = "0.1.0"
edition = "2021"
 

[dependencies]
serde = "1"
swc_core = { version = "0.90.30", features = ["ecma_plugin_transform","__parser"] }


[dev-dependencies]
testing = "0.35.19"
# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
